postgres-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:10.13
          imagePullPolicy: "IfNotPresent"
          ports:
           - containerPort: 5432
          readinessProbe:
           httpGet:
            path: /
            port: 80
           periodSeconds: 10
           successThreshold: 1
           failureThreshold: 3
           timeoutSeconds: 60
          livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 60
          initialDelaySeconds: 10
        - name: POSTGRES_DB
          value: testdatabase
        - name: POSTGRES_USER
          value: testuser
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              name: postgress-secret-config
              key: password
        - name: PGDATA
          value: /var/lib/postgresql/data/pgdata
          volumeMounts:
            - mountPath: /var/lib/postgresql/data/
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
