service.yml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: postgres
    tier: backend
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
