ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: my-host.local 
    http:
      paths:
      - backend:
          serviceName: my-service
          servicePort: 8080
